--- a/vickers_HelloAndroid/app/src/main/res/layout/activity_main.xml
+++ b/vickers_HelloAndroid/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!--New Comment!!-->
 <!-- This xml file creates the layout of the app -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
